user update endpoint
